# hse-secdev-Dmitry-Alekseev

./: .bandit.yml  .coveragerc.ini  Dockerfile  README.md  SECURITY.md  docker-compose.yaml  mypy.ini  project.db  pyproject.toml  requirements-dev.txt  requirements.txt  test.db  test_rate_limiting.db  test_users.db
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci-dast.yml  ci-iac-container.yml  ci-p11-dast.yml  ci-sast-secrets.yml  ci.yml  dependency-security.yml  sbom-sca.yml
app/: database.py  errors.py  main.py  models.py  project.db  schemas.py  security_headers.py
docs/adr/: ADR-001-rfc7807-error-format.md  ADR-002-rate-limiting-protection.md  ADR-003-secrets-management.md
docs/security-nfr/: NFR.md  NFR_BDD.md  NFR_TRACEABILITY.md
docs/threat-model/: RISKS.md  STRIDE.md
iac/: docker-compose-prod.yaml  service.yaml
policy/: waivers.yml
security/: .gitleaks.toml  checkov.yaml  hadolint,yaml  trivy.yaml
security/semgrep/: rules.yml
tests/: conftest.py  test_dependency_security.py  test_security_controls.py  test_users_endpoints.py
