[tool.ruff]
line-length = 100
select = [
    "E", "W", "F",
    "UP",
    "I",
    "B",
    "S",
]
ignore = [
    "S101",
    "B008",
]
target-version = "py311"
exclude = ["venv",".venv","build","dist"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["setuptools>=45.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hse-secdev-project"
version = "0.1.0"
description = "HSE Secure Development course project"
authors = [
    { name = "Dmitry Alekseev", email = "frtg1123456@gmail.com" },
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
